# scrapy-wayback-middleware

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
scrapy_wayback_middleware/: __init__.py  middleware.py
tests/: test_middleware.py
